@@ -26,6 +26,7 @@
     WATO:
     * 4142 New extended search dialog for rulesets and rules...
     * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
+    * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
 
     Notifications:
     * 4197 FIX: Fix sending notification to global fallback email address
